# chatroom_client_qt

./: CMakeLists.txt  Main.qml  main.cpp
backend/: bind_qml_logger.hpp
include/: chatroom.h  login.h  network.h  qstring_formatter.hpp  session.h  signup.h
src/: chatroom.cpp  login.cpp  network.cpp  session.cpp  signup.cpp
ui/: Chatroom.qml  Login.qml  Register.qml  Signup.qml  WaitConnection.qml
